adicionando atualizações 'sobre mim'

--- a/HTML_CSS_JavaScript/Loja_de_Games/index.html
+++ b/HTML_CSS_JavaScript/Loja_de_Games/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Loja de Games</title>
+    <style>
+        h1{
+            color:honeydew;
+        }
+    </style>
 </head>
 <body>
+    <nav>
     <ul>
         <li>
             <a href="index.html">Home</a>
@@ -15,7 +22,8 @@
             <a href="contato.html">Contato</a>
         </li>
     </ul>
-    <h1>Loja de Games</h1>
+    </nav>
+    <header><h1>Loja de Games</h1></header>
     <p>
         <h4>Bem vindo a minha loja!</h4> Temos diversos jogos de diversos temas para você escolher e se divertir. 
     </p>
@@ -34,4 +42,5 @@
         <li>Cuphead</li>
         <img src="./assets/Cuphead_capa.png" alt="Foto do jogo Cuphead"width="200" height="300">
     </ul>
+    <footer>Obrigada! 2022</footer>
 </body>
