--- a/HTML_CSS_JavaScript/Sobre Vitoria/contato.html
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/contato.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Contato</title>
 </head>
 <body>
-    <ul>
-        <li>
+    <nav>
             <a href="index.html">Home</a>
-        </li>
-        <li>
             <a href="contato.html">Contato</a>
-        </li>
-    </ul>
+    </nav>
+    <header>
     <h1>Contato</h1>
+</header>
     <h3>Entre em contato e deixe sua sugestão para melhorar!</h3>
 
     <form>
@@ -34,3 +33,9 @@
         <button>Enviar</button>
     </form>
 </body>
+<footer>
+    <div>
+        <button><a href = "mailto:contato@contato.santos.vitoria12@gmail.com"><img height="40px" src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" target="_blank"></a></button>
+        <button><a href="https://www.linkedin.com/in/vitória-santos-oliveira-she-her-53755b189/" target="_blank"><img height="40px"  src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white" target="_blank"></a></button> 
+        </div>
+</footer>
