adicionando java script

--- a/HTML_CSS_JavaScript/Sobre Vitoria/index.html
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/index.html
@@ -65,9 +65,48 @@
                 }
                 </style>
     </p>
+
+    <div class = "caixa">
+        <p><ul>
+            <h2>Hobbies:</h2><br>
+            <h3><li>Filmes</li>
+                <div class="box">
+                    <img src="./assets/icons8-stormtrooper-100.png" width="40"/>
+                    </div>
+            <li>Desenhos</li>
+            <div class="box">
+                <img src="./assets/icons8-rick-sanchez-100.png" width="40"/>
+                </div>
+            <li>Series</li>
+            <div class="box">
+                <img src="./assets/icons8-walter-white-100.png" width="40"/>
+                </div>
+            <li>Jogos </li>
+            <div class="box">
+                <img src="./assets/icons8-super-mario-48.png" width="40"/>
+                </div>
+            <li>Pintura</li>
+            <div class="box">
+                <img src="./assets/icons8-van-gogh-48.png" width="40"/>
+                </div>
+            <li>Musica</li></h3>
+            <div class="box">
+                <img src="./assets/icons8-music-heart-64.png" width="40"/>
+                </div>
+        </ul>
+        </p>
+    </div>
+
+    <script src="./assets/scripts/script.js"></script>
+
     </body>
 <footer>
     <a href="contato.html">Contato</a>
     <a href="https://github.com/viisoli">GitHub</a>
+    <div>
+        <button onclick="clique()">
+            <img src="./assets/png-clipart-pixel-art-cross-stitch-bead-drawing-dairy-cow-graphic-comics-text-thumbnail.png" alt="vaquinha" height="50">
+        </button>
+    </div>
 </footer>
     
