--- a/HTML_CSS_JavaScript/Sobre Vitoria/contato.html
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-contato.css">
     <title>Contato</title>
 </head>
 <body>
@@ -19,23 +19,33 @@
 
     <form>
         <label for="nome">Nome:</label> <br/>
-        <input type="text" id="nome"/>
+        <input type="text" id="nome" onkeyup="validaNome()">
+        <div id="txtNome"></div>
         <br/>
         <br/>
         <label for="email">E-mail:</label> <br/>
-        <input type="text" id="email"/>
+        <input type="text" id="email" onkeyup="validaEmail()" >
+        <div id="txtEmail"></div>
         <br/>
         <br/>
         <label for="assunto">Assunto:</label> <br/>
-        <textarea name="assunto" id="assunto" cols=60 rows=5></textarea>
+        <textarea name="assunto" id="assunto" cols=60 rows=5 onkeyup="validaAssunto()"></textarea>
+        <div id="txtAssunto"></div>
         <br/>
+        <br>
+            <label for="data">Data: </label><br>
+            <input type="date" id="data">
         <br/>
-        <button>Enviar</button>
+        <button onclick="enviar()">Enviar</button>
     </form>
+
+    <script src="./assets/scripts/script-contato.js"></script>
+
 </body>
 <footer>
     <div>
-        <button><a href = "mailto:contato@contato.santos.vitoria12@gmail.com"><img height="40px" src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" target="_blank"></a></button>
-        <button><a href="https://www.linkedin.com/in/vitória-santos-oliveira-she-her-53755b189/" target="_blank"><img height="40px"  src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white" target="_blank"></a></button> 
-        </div>
+        <a href="https://www.linkedin.com/in/vit%C3%B3ria-santos-oliveira-53755b189/" target="_blank"><img class="footer" height="40px"
+        src="./assets/linkedin_logo_icon_147268.png" alt="icone linkedin"></a>
+        <a href="https://github.com/viisoli" target="_blank"><img class="footer" height="40px"
+            src="./assets/25231.png" alt="icone github"></a>
 </footer>
