--- a/HTML_CSS_JavaScript/Sobre Vitoria/index.html
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/index.html
@@ -13,7 +13,7 @@
         <a href="contato.html">Contato</a>
     </nav>
 
-    <img src="./assets/capa.png" alt="Capa da pagina">
+    <img class = "capa" src="./assets/capa.png" alt="Capa da pagina">
 
     <header>
         <h1>Sobre Mim</h1> 
@@ -21,42 +21,42 @@
 
     <p class = p1>
         <h2>Bem vindo a minha página!</h2>
-        <h3>Olá, sou Vitoria! 👋</h3> <h3> Meus pronomes são Ela/Dela, tenho 20 anos.
+        <h3>Olá, sou Vitoria! 👋</h3> Meus pronomes são Ela/Dela, tenho 20 anos.
         Moro em Diadema, SP, atualmente trabalho na SumUp como Assistente I na área de Facilities. 
         Já fiz parte do Instituto Proa onde me desenvolvi bastante para o mercado de trabalho, como aprofundamento em elementos e recursos da ferramenta Excel na criação de planilhas e introdução ao Pacote Office, e foi onde desenvolvi algumas BSM's também, como Comunicação. 
         Atualmente estou fazendo faculdade de Engenharia da Computação, sou estudante da Generation Brasil, para formação de Desenvolvedora Full-Stack JAVA Jr.
         <br>
-        Esse é meu primeiro trabalho no Bloco III com Html, espero que tenha conhecido um pouco de mim e estou aberta a feedback e duvidas!</h3>
+        Esse é meu primeiro trabalho no Bloco III com Html, espero que tenha conhecido um pouco de mim e estou aberta a feedback e duvidas!
     </p>
     <p><h2>Aprendendo:</h2>
         <br>
         <div class="box">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" width="40" height="40"/>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" width="80" height="80"/>
         </div>
         <div class="box">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" width="40" height="40"/> 
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" width="80" height="80"/> 
         </div>
         </div>
         <div class="box">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" width="40" height="40"/> 
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" width="80" height="80"/> 
         </div>
     </div>
     <div class="box">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="40" height="40"/> 
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="80" height="80"/> 
             </div>
         </div>
         <div class="box">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" width="40" height="40"/> 
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" width="80" height="80"/> 
             </div>
         </div>
         <div class="box">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" width="40" height="40"/> 
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" width="80" height="80"/> 
         </div>
         <div class="box">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" width="40" height="40"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" width="80" height="80"/>
             </div>
             <div class="box">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" width="40" height="40"/> 
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" width="80" height="80"/> 
             </div>
             <style>
                 div.box {
@@ -66,35 +66,34 @@
                 </style>
     </p>
 
-    <div class = "caixa">
-        <p><ul>
-            <h2>Hobbies:</h2><br>
-            <h3><li>Filmes</li>
+    <div>
+        <h2>Hobbies:</h2>
+        <ul class="hobbies">
+            <li><h3>Filmes</h3>
                 <div class="box">
-                    <img src="./assets/icons8-stormtrooper-100.png" width="40"/>
-                    </div>
-            <li>Desenhos</li>
+                    <img src="./assets/icons8-stormtrooper-100.png" width="80"/>
+                    </div></li>
+            <li><h3>Desenhos</h3>
             <div class="box">
-                <img src="./assets/icons8-rick-sanchez-100.png" width="40"/>
-                </div>
-            <li>Series</li>
+                <img src="./assets/icons8-rick-sanchez-100.png" width="80"/>
+                </div></li>
+            <li><h3>Series</h3>
             <div class="box">
-                <img src="./assets/icons8-walter-white-100.png" width="40"/>
-                </div>
-            <li>Jogos </li>
+                <img src="./assets/icons8-walter-white-100.png" width="80"/>
+                </div></li>
+            <li><h3>Jogos </h3>
             <div class="box">
-                <img src="./assets/icons8-super-mario-48.png" width="40"/>
-                </div>
-            <li>Pintura</li>
+                <img src="./assets/icons8-super-mario-48.png" width="80"/>
+                </div></li>
+            <li><h3>Pintura</h3>
             <div class="box">
-                <img src="./assets/icons8-van-gogh-48.png" width="40"/>
-                </div>
-            <li>Musica</li></h3>
+                <img src="./assets/icons8-van-gogh-48.png" width="80"/>
+                </div></li>
+            <li><h3>Musica</h3>
             <div class="box">
-                <img src="./assets/icons8-music-heart-64.png" width="40"/>
-                </div>
+                <img src="./assets/icons8-music-heart-64.png" width="80"/>
+                </div></li>
         </ul>
-        </p>
     </div>
 
     <script src="./assets/scripts/script.js"></script>
