adicionando local e video

--- a/HTML_CSS_JavaScript/Sobre Vitoria/contato.html
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-contato.css">
+    <link rel="stylesheet" href="./style-contato.css">
     <title>Contato</title>
 </head>
 <body>
@@ -40,6 +40,9 @@
     </form>
 
     <script src="./assets/scripts/script-contato.js"></script>
+
+    <h2>Local</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113630.98419807036!2d-109.40885550385408!3d-27.12580979129388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9947f017a8d4ae2b%3A0xbbe5b3edc02a2db6!2sIlha%20de%20P%C3%A1scoa!5e0!3m2!1spt-BR!2sbr!4v1644622959107!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 </body>
 <footer>
