--- a/HTML_CSS_JavaScript/Sobre Vitoria/index.html
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Sobre mim</title>
 </head>
 <body>
@@ -95,6 +95,9 @@
                 </div></li>
         </ul>
     </div>
+
+    <h2>Video</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/k8Y6ZTjmCXs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <script src="./assets/scripts/script.js"></script>
 
