alterações no css

--- a/HTML_CSS_JavaScript/Sobre Vitoria/contato.html
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/contato.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style-contato.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Contato</title>
 </head>
 <body>
     <nav>
-            <a href="index.html">Home</a>
-            <a href="contato.html">Contato</a>
+        <ul class = "menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>  
     </nav>
     <header>
-    <h1>Contato</h1>
+    <h1>Entre em contato e deixe sua sugestão para melhorar!</h1>
 </header>
-    <h3>Entre em contato e deixe sua sugestão para melhorar!</h3>
-
-    <form>
+<div class = container>
+    <div class = p-30>
+        <form class = "br-20">
         <label for="nome">Nome:</label> <br/>
         <input type="text" id="nome" onkeyup="validaNome()">
         <div id="txtNome"></div>
@@ -38,17 +40,18 @@
         <br/>
         <button onclick="enviar()">Enviar</button>
     </form>
-
-    <script src="./assets/scripts/script-contato.js"></script>
-
-    <h2>Local</h2>
+    </div>
+    <div class = "ml-50">
+        <h2 class = "subtitulo">Local</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113630.98419807036!2d-109.40885550385408!3d-27.12580979129388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9947f017a8d4ae2b%3A0xbbe5b3edc02a2db6!2sIlha%20de%20P%C3%A1scoa!5e0!3m2!1spt-BR!2sbr!4v1644622959107!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
+    </div>
+    </div>
+    <script src="./assets/scripts/script-contato.js"></script>
 </body>
 <footer>
-    <div>
-        <a href="https://www.linkedin.com/in/vit%C3%B3ria-santos-oliveira-53755b189/" target="_blank"><img class="footer" height="40px"
+        <a href="https://www.linkedin.com/in/vit%C3%B3ria-santos-oliveira-53755b189/" target="_blank"><img class="tm-social" 
         src="./assets/linkedin_logo_icon_147268.png" alt="icone linkedin"></a>
-        <a href="https://github.com/viisoli" target="_blank"><img class="footer" height="40px"
+        <a href="https://github.com/viisoli" target="_blank"><img class="tm-social"
             src="./assets/25231.png" alt="icone github"></a>
+        <p>Todos os direitos reservados: Vitoria Oliveira &copy;</p>
 </footer>
