--- a/HTML_CSS_JavaScript/Sobre Vitoria/index.html
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/index.html
@@ -9,17 +9,19 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="contato.html">Contato</a>
+        <ul class = "menu">
+        <li><a href="index.html">Home</a></li> 
+        <li><a href="contato.html">Contato</a></li>
+        </ul>
     </nav>
 
     <img class = "capa" src="./assets/capa.png" alt="Capa da pagina">
 
     <header>
-        <h1>Sobre Mim</h1> 
+        <h1 class = "titulo">Sobre Mim</h1> 
     </header>
 
-    <p class = p1>
+    <p class = p-30>
         <h2>Bem vindo a minha página!</h2>
         <h3>Olá, sou Vitoria! 👋</h3> Meus pronomes são Ela/Dela, tenho 20 anos.
         Moro em Diadema, SP, atualmente trabalho na SumUp como Assistente I na área de Facilities. 
@@ -28,7 +30,7 @@
         <br>
         Esse é meu primeiro trabalho no Bloco III com Html, espero que tenha conhecido um pouco de mim e estou aberta a feedback e duvidas!
     </p>
-    <p><h2>Aprendendo:</h2>
+    <p><h2 class = "subtitulo">Aprendendo:</h2>
         <br>
         <div class="box">
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" width="80" height="80"/>
@@ -67,7 +69,7 @@
     </p>
 
     <div>
-        <h2>Hobbies:</h2>
+        <h2 class = "subtitulo">Hobbies:</h2>
         <ul class="hobbies">
             <li><h3>Filmes</h3>
                 <div class="box">
@@ -96,19 +98,20 @@
         </ul>
     </div>
 
-    <h2>Video</h2>
+    <h2 class = "subtitulo">Video</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/k8Y6ZTjmCXs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <script src="./assets/scripts/script.js"></script>
 
     </body>
 <footer>
-    <a href="contato.html">Contato</a>
-    <a href="https://github.com/viisoli">GitHub</a>
-    <div>
+    <a href="https://www.linkedin.com/in/vit%C3%B3ria-santos-oliveira-53755b189/" target="_blank"><img class="tm-social"
+        src="./assets/linkedin_logo_icon_147268.png" alt="icone linkedin"></a>
+    <a href="https://github.com/viisoli" target="_blank"><img class="tm-social"
+            src="./assets/25231.png" alt="icone github"></a>
         <button onclick="clique()">
             <img src="./assets/png-clipart-pixel-art-cross-stitch-bead-drawing-dairy-cow-graphic-comics-text-thumbnail.png" alt="vaquinha" height="50">
         </button>
-    </div>
+        <p>Todos os direitos reservados: Vitoria Oliveira &copy;</p>
 </footer>
     
